--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
     // livedata
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 }
