--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
     // livedata
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    // room
+    implementation 'androidx.room:room-runtime:2.6.0'
+    kapt "androidx.room:room-compiler:2.6.0"
 }
