--- a/data/build.gradle
+++ b/data/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     // room
     implementation 'androidx.room:room-runtime:2.6.0'
     kapt "androidx.room:room-compiler:2.6.0"
+    // data source
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    // MQTT
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
