--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.48.1'
     // compose
     implementation "androidx.activity:activity-compose:1.8.1"
+    // MQTT
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
 
 kapt {
