--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         <uses-library android:name="com.google.android.wearable" android:required="true" />
         <meta-data android:name="com.google.android.wearable.standalone" android:value="true" />
 
+        <service android:name="org.eclipse.paho.android.service.MqttService">
+        </service>
         <activity
             android:name=".MainActivity"
             android:exported="true"
