--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     // dagger-hilt
     implementation "com.google.dagger:hilt-android:2.48.1"
     kapt 'com.google.dagger:hilt-compiler:2.48.1'
+    // inject
+    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
     // compose
     implementation "androidx.activity:activity-compose:1.8.1"
     // MQTT
