--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.mongs.wear"
         minSdk 30
         targetSdk 34
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 5
+        versionName "1.0.4"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -59,8 +59,10 @@ dependencies {
     // compose
     implementation "androidx.activity:activity-compose:1.9.0"
     // MQTT
+    implementation 'com.github.hannesa2:paho.mqtt.android:3.3.5@aar'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+//    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
 
 kapt {
