--- a/data/build.gradle
+++ b/data/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.1.1"
     implementation "androidx.datastore:datastore-preferences-core:1.1.1"
     // MQTT
-    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.hannesa2:paho.mqtt.android:3.3.5@aar'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+//    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
