feat: 화면 개발 완료
- 1차 내부 테스트 예정

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -37,8 +37,9 @@ android {
 dependencies {
     implementation project(path: ':domain')
 
+    implementation "com.android.billingclient:billing-ktx:7.0.0"
     // google-login
-    implementation platform("com.google.firebase:firebase-bom:33.0.0")
+    implementation platform("com.google.firebase:firebase-bom:33.1.0")
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     // google-map
