--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'com.android.library'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -19,16 +18,20 @@ android {
             minifyEnabled false
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
         jvmTarget = '17'
     }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.3'
     }
@@ -37,31 +40,27 @@ android {
 dependencies {
     implementation project(path: ':domain')
 
-    implementation "com.android.billingclient:billing-ktx:7.0.0"
+    // dagger & hilt
+    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+    implementation "com.google.dagger:hilt-android:2.49"
+    kapt 'com.google.dagger:hilt-compiler:2.48.1'
     // google-login
-    implementation platform("com.google.firebase:firebase-bom:33.1.0")
+    implementation platform("com.google.firebase:firebase-bom:33.1.1")
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
-    // google-map
-//    implementation "com.google.android.gms:play-services-maps:18.2.0"
-//    implementation "com.google.android.gms:play-services-location:21.1.0"
-//    implementation "com.google.maps.android:maps-compose:2.9.0"
     // coil (gif)
     implementation 'io.coil-kt:coil-compose:2.5.0'
     implementation 'io.coil-kt:coil-gif:2.5.0'
-    // dagger-hilt
-    implementation "com.google.dagger:hilt-android:2.49"
-    kapt 'com.google.dagger:hilt-compiler:2.48.1'
     // compose
     implementation "androidx.wear.compose:compose-material:1.3.1"
-    implementation "androidx.compose.material:material-icons-extended:1.6.7"
+    implementation "androidx.compose.material:material-icons-extended:1.6.8"
     implementation "androidx.wear.compose:compose-navigation:1.3.1"
     implementation "androidx.wear.compose:compose-foundation:1.3.1"
     implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.6.7"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.6.7"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.6.8"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.6.8"
     // liveData
-    implementation "androidx.compose.runtime:runtime-livedata:1.6.7"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.8"
     // billing
     implementation "com.android.billingclient:billing-ktx:7.0.0"
 }
