fix: 코드 정리 진행중
- ui 로딩 개선
- 피드백 기능 추가
- 배틀 ui 변경 (이펙트 컴포넌트 이동)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <uses-library android:name="com.google.android.wearable" android:required="true" />
         <meta-data android:name="com.google.android.wearable.standalone" android:value="true" />
 
-        <service android:name="info.mqtt.android.service.MqttService" />
+<!--        <service android:name="info.mqtt.android.service.MqttService" />-->
         <activity
             android:name="com.mongs.wear.MainActivity"
             android:exported="true"
