--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.android.application'
+    id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
 }
 
 android {
@@ -26,20 +26,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
+
     buildFeatures {
         compose true
         buildConfig = true
     }
+
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -48,18 +53,16 @@ android {
 }
 
 dependencies {
+    implementation project(':core')
     implementation project(':presentation')
-    implementation project(":domain")
-    implementation project(":data")
+    implementation project(':domain')
+    implementation project(':data')
 
     // dagger & hilt
     implementation group: 'javax.inject', name: 'javax.inject', version: '1'
     implementation "com.google.dagger:hilt-android:2.49"
-    kapt 'com.google.dagger:hilt-compiler:2.48.1'
-    // compose
-    implementation "androidx.activity:activity-compose:1.9.0"
-}
+    ksp 'com.google.dagger:hilt-compiler:2.48.1'
 
-kapt {
-    correctErrorTypes = true
+    // compose
+    implementation "androidx.activity:activity-compose:1.9.3"
 }
