--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.android.application'
     id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -69,4 +70,9 @@ dependencies {
 
     // worker
     implementation "androidx.work:work-runtime-ktx:2.8.1"
+
+    // fcm
+//    implementation 'com.google.firebase:firebase-messaging:24.1.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
