--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.android.library'
     id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -51,8 +52,6 @@ dependencies {
     implementation platform("com.google.firebase:firebase-bom:33.7.0")
     implementation "com.google.firebase:firebase-auth"
     implementation 'com.google.android.gms:play-services-auth:21.3.0'
-    implementation 'com.google.firebase:firebase-analytics'
-
 //    implementation "androidx.credentials:credentials:1.3.0"
 //    implementation "androidx.credentials:credentials-play-services-auth:1.3.0"
 //    implementation "com.google.android.libraries.identity.googleid:googleid:1.1.1"
@@ -62,13 +61,13 @@ dependencies {
     implementation 'io.coil-kt:coil-gif:2.5.0'
 
     // compose
-    implementation "androidx.wear.compose:compose-material:1.4.0"
-    implementation "androidx.compose.material:material-icons-extended:1.7.6"
-    implementation "androidx.wear.compose:compose-navigation:1.4.0"
-    implementation "androidx.wear.compose:compose-foundation:1.4.0"
-    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.7.6"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.7.6"
+    implementation 'androidx.wear.compose:compose-material:1.4.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.7.6'
+    implementation 'androidx.wear.compose:compose-navigation:1.4.0'
+    implementation 'androidx.wear.compose:compose-foundation:1.4.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.7.6'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.6'
 
     // liveData
     implementation "androidx.compose.runtime:runtime-livedata:1.7.6"
