--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'com.android.library'
     id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -74,4 +73,9 @@ dependencies {
 
     // billing
     implementation "com.android.billingclient:billing-ktx:7.1.1"
+
+    // worker
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
+    implementation 'androidx.hilt:hilt-work:1.2.0'
+    ksp "androidx.hilt:hilt-compiler:1.2.0"
 }
